force-app/main/default/objects/SeasonPitchingStats__c/SeasonPitchingStats__c.object-meta.xml
<CustomObject>
    <label>投手成績(シーズン)</label>
    <nameField>
        <label>投手成績No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>