force-app/main/default/objects/SeasonPitchingStats__c/fields/ao__c.field-meta.xml
<CustomField>
    <fullName>ao__c</fullName>
    <label>フライアウト</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>