force-app/main/default/objects/SeasonPitchingStats__c/fields/avg__c.field-meta.xml
<CustomField>
    <fullName>avg__c</fullName>
    <inlineHelpText>対戦打者のトータル打席数に対して安打を許した割合</inlineHelpText>
    <label>被安打率</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>