force-app/main/default/objects/SeasonPitchingStats__c/fields/bb9__c.field-meta.xml
<CustomField>
    <fullName>bb9__c</fullName>
    <label>BB/9</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>