force-app/main/default/objects/SeasonPitchingStats__c/fields/bb__c.field-meta.xml
<CustomField>
    <fullName>bb__c</fullName>
    <label>与四球</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>