force-app/main/default/objects/SeasonPitchingStats__c/fields/bk__c.field-meta.xml
<CustomField>
    <fullName>bk__c</fullName>
    <label>ボーク</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>