force-app/main/default/objects/SeasonPitchingStats__c/fields/cg__c.field-meta.xml
<CustomField>
    <fullName>cg__c</fullName>
    <label>完投</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>