force-app/main/default/objects/SeasonPitchingStats__c/fields/er__c.field-meta.xml
<CustomField>
    <fullName>er__c</fullName>
    <label>自責点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>