force-app/main/default/objects/SeasonPitchingStats__c/fields/era__c.field-meta.xml
<CustomField>
    <fullName>era__c</fullName>
    <label>防御率</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>