force-app/main/default/objects/SeasonPitchingStats__c/fields/g__c.field-meta.xml
<CustomField>
    <fullName>g__c</fullName>
    <label>試合数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>