force-app/main/default/objects/SeasonPitchingStats__c/fields/gf__c.field-meta.xml
<CustomField>
    <fullName>gf__c</fullName>
    <inlineHelpText>ある救援投手がチームの最終の投手を務めた試合の数</inlineHelpText>
    <label>最終投手試合数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>