force-app/main/default/objects/SeasonPitchingStats__c/fields/gidp__c.field-meta.xml
<CustomField>
    <fullName>gidp__c</fullName>
    <label>併殺打数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>