force-app/main/default/objects/SeasonPitchingStats__c/fields/gs__c.field-meta.xml
<CustomField>
    <fullName>gs__c</fullName>
    <label>先発数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>