force-app/main/default/objects/SeasonPitchingStats__c/fields/h9__c.field-meta.xml
<CustomField>
    <fullName>h9__c</fullName>
    <inlineHelpText>9回の平均被安打</inlineHelpText>
    <label>H/9</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>