force-app/main/default/objects/SeasonPitchingStats__c/fields/hb__c.field-meta.xml
<CustomField>
    <fullName>hb__c</fullName>
    <label>与死球</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>