force-app/main/default/objects/SeasonPitchingStats__c/fields/hr9__c.field-meta.xml
<CustomField>
    <fullName>hr9__c</fullName>
    <inlineHelpText>9イニングあたりの被本塁打数</inlineHelpText>
    <label>HR/9</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>