force-app/main/default/objects/SeasonPitchingStats__c/fields/hr__c.field-meta.xml
<CustomField>
    <fullName>hr__c</fullName>
    <label>披本塁打</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>