force-app/main/default/objects/SeasonPitchingStats__c/fields/ibb__c.field-meta.xml
<CustomField>
    <fullName>ibb__c</fullName>
    <label>敬遠</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>