force-app/main/default/objects/SeasonPitchingStats__c/fields/ip__c.field-meta.xml
<CustomField>
    <fullName>ip__c</fullName>
    <label>投球回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>