force-app/main/default/objects/SeasonPitchingStats__c/fields/k9__c.field-meta.xml
<CustomField>
    <fullName>k9__c</fullName>
    <label>K/9</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>