force-app/main/default/objects/SeasonPitchingStats__c/fields/kbb__c.field-meta.xml
<CustomField>
    <fullName>kbb__c</fullName>
    <inlineHelpText>三振と四球の割合（奪三振数÷与四球）</inlineHelpText>
    <label>K/BB</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>