force-app/main/default/objects/SeasonPitchingStats__c/fields/l__c.field-meta.xml
<CustomField>
    <fullName>l__c</fullName>
    <label>敗北数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>