force-app/main/default/objects/SeasonPitchingStats__c/fields/np__c.field-meta.xml
<CustomField>
    <fullName>np__c</fullName>
    <label>投球数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>