force-app/main/default/objects/SeasonPitchingStats__c/fields/pip__c.field-meta.xml
<CustomField>
    <fullName>pip__c</fullName>
    <inlineHelpText>１イニングの平均投球数（投球数の合計÷投球イニング数）</inlineHelpText>
    <label>P/IP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>