force-app/main/default/objects/SeasonPitchingStats__c/fields/pk__c.field-meta.xml
<CustomField>
    <fullName>pk__c</fullName>
    <label>牽制死</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>