force-app/main/default/objects/SeasonPitchingStats__c/fields/qs__c.field-meta.xml
<CustomField>
    <fullName>qs__c</fullName>
    <inlineHelpText>先発で６イニング以上登板して自責点３以下の時に記録される</inlineHelpText>
    <label>Quality Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>