force-app/main/default/objects/SeasonPitchingStats__c/fields/r__c.field-meta.xml
<CustomField>
    <fullName>r__c</fullName>
    <label>失点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>