force-app/main/default/objects/SeasonPitchingStats__c/fields/sac__c.field-meta.xml
<CustomField>
    <fullName>sac__c</fullName>
    <label>犠打</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>