force-app/main/default/objects/SeasonPitchingStats__c/fields/season__c.field-meta.xml
<CustomField>
    <fullName>season__c</fullName>
    <label>シーズン</label>
    <length>4</length>
    <type>Text</type>
</CustomField>