force-app/main/default/objects/SeasonPitchingStats__c/fields/sho__c.field-meta.xml
<CustomField>
    <fullName>sho__c</fullName>
    <label>完封</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>