force-app/main/default/objects/SeasonPitchingStats__c/fields/slg__c.field-meta.xml
<CustomField>
    <fullName>slg__c</fullName>
    <label>被塁打率</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>