force-app/main/default/objects/SeasonPitchingStats__c/fields/so__c.field-meta.xml
<CustomField>
    <fullName>so__c</fullName>
    <label>奪三振</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>