force-app/main/default/objects/SeasonPitchingStats__c/fields/sv__c.field-meta.xml
<CustomField>
    <fullName>sv__c</fullName>
    <label>セーブ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>