force-app/main/default/objects/SeasonPitchingStats__c/fields/svo__c.field-meta.xml
<CustomField>
    <fullName>svo__c</fullName>
    <label>セーブ機会</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>