force-app/main/default/objects/SeasonPitchingStats__c/fields/w__c.field-meta.xml
<CustomField>
    <fullName>w__c</fullName>
    <label>勝利数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>