force-app/main/default/objects/SeasonPitchingStats__c/fields/whip__c.field-meta.xml
<CustomField>
    <fullName>whip__c</fullName>
    <inlineHelpText>１イニング当たりに投手が許した走者の数（計算式：（安打＋四球）÷投球回）</inlineHelpText>
    <label>WHIP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>