force-app/main/default/objects/SeasonPitchingStats__c/fields/wp__c.field-meta.xml
<CustomField>
    <fullName>wp__c</fullName>
    <label>暴投</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>