force-app/main/default/objects/SeasonPitchingStats__c/fields/wpct__c.field-meta.xml
<CustomField>
    <fullName>wpct__c</fullName>
    <inlineHelpText>勝利数÷（勝利数＋負け数）</inlineHelpText>
    <label>勝率</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>